--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Sheryl Garfield</title>
 </head>
 <body>
+    <nav><a href="contact.html">Contact</a>
+    </nav>
+
     <h1>Sheryl Garfield</h1>
 
     <h4>Hailing originally from California, Sheryl has also lived in 
@@ -30,19 +33,8 @@
         <img id="hat" src="images/HatPic.jpg" width="250" height="300"><img>
     </div>
 
-    <h2>Contact Sheryl!</h2>
+    
 
-    <form>
-        <label>Name:</label><br>
-        <input type="text"
-            id="name" placeholder="Name..."><br>
-        <label>Message:</label><br>
-        <textarea name="text" id="labelname" cols="30" rows="10"></textarea><br>
-        <label>Email:</label>
-        <input type="text"
-            id="email" placeholder="Email..."><br>
-        <button>Submit</button>
-        <p>Thank you for your comments. We will email a reply you within a week.</p>
-    </form>
+    
 </body>
 </html>
